--- a/app.yaml
+++ b/app.yaml
@@ -1,6 +1,6 @@
-runtime: python39  # You can also use python38 if you're using Python 3.8
+runtime: python39 
 
-entrypoint: gunicorn -b :$PORT app:app  # Tell GAE how to run your Flask app
+entrypoint: gunicorn -b :$PORT app:app  
 
 handlers:
 - url: /static
@@ -10,4 +10,4 @@ handlers:
   script: auto
 
 env_variables:
-  GOOGLE_APPLICATION_CREDENTIALS: "C:/Users/temir/cap5930-project-1-da121717363a.json"
+  GOOGLE_APPLICATION_CREDENTIALS: "C:/Users/temir/cap5930-project-1-da121717363a.json" # edit the path for the credentials
