--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-Flask==2.1.1
-google-cloud-speech==2.9.0
-google-cloud-texttospeech==2.9.0
-gunicorn==20.1.0
+Flask
+google-cloud-speech
+google-cloud-texttospeech
+google-cloud-storage
+gunicorn
+Werkzeug
