Switching from Google Google App Engine to Cloud Run, with containerizing the app

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-Flask
+Flask==3.0.3
 google-cloud-speech
 google-cloud-texttospeech
 google-cloud-storage
+google-cloud-secret-manager
 gunicorn
 Werkzeug
