--- a/app.yaml
+++ b/app.yaml
@@ -1,13 +1,8 @@
 runtime: python39 
-
-entrypoint: gunicorn -b :$PORT app:app  
-
+entrypoint: gunicorn -b :$PORT main:app  
 handlers:
-- url: /static
-  static_dir: static
-
 - url: /.*
   script: auto
-
 env_variables:
-  GOOGLE_APPLICATION_CREDENTIALS: "C:/Users/temir/cap5930-project-1-da121717363a.json" # edit the path for the credentials
+  # GOOGLE_APPLICATION_CREDENTIALS: "C:/Users/temir/cap5930-project-1-e0c45772710c.json" # edit the path for the credentials
+  GOOGLE_CLOUD_PROJECT: "cap5930-project-1"
