--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,6 @@ google-cloud-speech
 google-cloud-texttospeech
 google-cloud-storage
 google-cloud-secret-manager
+google-cloud-language
 gunicorn
 Werkzeug
